--- a/render.yaml
+++ b/render.yaml
@@ -7,7 +7,7 @@ services:
     region: oregon
     plan: free
     buildCommand: cd backend && pip install -r requirements.txt
-    startCommand: cd backend && uvicorn run:app --host 0.0.0.0 --port $PORT
+    startCommand: cd backend && uvicorn app.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: YOUTUBE_API_KEY
         sync: false
