--- a/render.yaml
+++ b/render.yaml
@@ -15,6 +15,8 @@ services:
         sync: false
       - key: PYTHON_VERSION
         value: 3.11.0
+      - key: ALLOWED_ORIGINS
+        value: https://youtube-studio-frontend.onrender.com
 
   # Frontend
   - type: web
