Temporarily allow all origins for CORS debugging

--- a/render.yaml
+++ b/render.yaml
@@ -16,7 +16,7 @@ services:
       - key: PYTHON_VERSION
         value: 3.11.0
       - key: ALLOWED_ORIGINS
-        value: https://youtube-studio-frontend.onrender.com
+        value: "*"
 
   # Frontend
   - type: web
