fix(deploy): Add Supabase env vars to backend service

--- a/render.yaml
+++ b/render.yaml
@@ -13,6 +13,10 @@ services:
         sync: false
       - key: GEMINI_API_KEY
         sync: false
+      - key: SUPABASE_URL
+        value: https://mdoocfrbqttyjrmeojbf.supabase.co
+      - key: SUPABASE_KEY
+        sync: false
       - key: PYTHON_VERSION
         value: 3.11.0
       - key: ALLOWED_ORIGINS
